--- a/views/index.html
+++ b/views/index.html
@@ -21,6 +21,10 @@
 
   <section id="console">
     <h1>Console</h1>
+    <h4>
+      <span id="online">0</span> user(s) online, 
+      <span id="running">0</span> program(s) running
+    </h4>
     <hr class="console-spliter">
     <div id="log"></div>
   </section>
