--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
       <button id="halt" class="button">STOP</button>
     </p>
     <p id="hint"></p>
-    <textarea id="input"></textarea>
+    <textarea id="input" autofocus="true"></textarea>
   </section>
 
   <section id="console">
