--- a/views/css/index.css
+++ b/views/css/index.css
@@ -47,8 +47,9 @@
   width: 6em;
   height: 3em;
   margin: 1em auto;
-  background: #0f0;
-  color: #000;
+  background: #000;
+  color: #0f0;
+  border: 0.1em solid #0f0;
   cursor: pointer;
 }
 /* ----- editor end ----- */
