--- a/views/css/layout.css
+++ b/views/css/layout.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: main;
+  src: url('YaheiConsolasHybrid.ttf');
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +12,7 @@
   list-style: none;
   text-decoration: none;
 
-  font-family: '微软雅黑', sans-serif;
+  font-family: main, '微软雅黑', sans-serif;
   font-weight: 100;
   color: #0f0;
   background: #000;
