--- a/views/index.html
+++ b/views/index.html
@@ -31,6 +31,7 @@
   
   <script src="/socket.io/socket.io.js"></script>
   <script src="./js/util.js"></script>
+  <script src="./js/TrieTree.js"></script>
   <script src="./js/index.js"></script>
 
 </body>
