fixed mobile style

--- a/views/index.html
+++ b/views/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Node Online</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
+  <title>Node Online</title>
   <link rel="stylesheet" href="./css/layout.css">
   <link rel="stylesheet" href="./css/index.css">
 </head>
@@ -27,6 +27,7 @@
     </h4>
     <hr class="console-spliter">
     <div id="log"></div>
+    <button id="totop" class="button">↑</button>
   </section>
   
   <script src="/socket.io/socket.io.js"></script>
