--- a/views/css/index.css
+++ b/views/css/index.css
@@ -83,4 +83,43 @@
 #log p[class="error"] * {
   color: #f00;
 }
+
+#totop {
+  width: 2.5em;
+  height: 2.5em;
+  position: fixed;
+  right: 2em;
+  bottom: 1em;
+  display: none;
+}
 /* ----- console end ----- */
+
+/* ----- for mobile ----- */
+@media (max-width: 1000px) {
+  #editor,
+  #console {
+    width: 100%;
+    left: 0;
+    border: none;
+  }
+
+  #console {
+    top: 100%;
+  }
+
+  #console h1 {
+    margin-bottom: 0.3em;
+  }
+
+  #console h4 {
+    position: relative;
+    margin-bottom: 0.2em;
+    top: 0;
+    left: 0;
+    text-align: center;
+    font-size: 0.8em;
+  }
+  #console h4 * {
+    font-size: 0.8em;
+  }
+}
